--- a/vote-chart/values.yaml
+++ b/vote-chart/values.yaml
@@ -4,7 +4,7 @@
 
 replicaCount: 1
 image:
-  repository: #####@@@@@
+  repository: rutwiksquareops/vote-app-vote
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "8"
